--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   build_service:
     build: build_file
     volumes:
-      - app-volume:target
+      - app-volume:/test/target
 
   web_service:
     image: tomcat:11.0.0-jdk17
